Fix spacing with about info and remove heading

--- a/src/style.css
+++ b/src/style.css
@@ -232,6 +232,8 @@ div.main-container {
 div.name-card-container {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
+  padding-top: 50px;
 }
 
 h1 {
